# bookstore

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.http  docker-compose.yml  go.mod
.sqlx/: query-1f2ccc9e591aa137010196e6e7c8177bf22b8f2d84d07cfc3bcf33a0a5cba6f7.json  query-3b7c63b9cac14ae2248c10a610e45264b31d8604b6aea9893e02897c0dd22746.json  query-443820accc5a8dd95aea2bb17ff1a57005961fda30c7efee305191ef50a8f564.json  query-5af575bd09dbdf9b595b51f0d2f71408e705bf7c7f56df80f78ac7a938a70200.json  query-704dba713b2f28810e1054cb835f2651ff03116eaa4d629a1185a824e7000843.json  query-7d28f2c57c3eb7ecaf78e3c8115bf467fba8808b150ccc10e78276efc85b03f4.json  query-81f056124fed3a90fcbffc8e556ff5a82573ea3def73c7fda8c91ae76a801478.json  query-8b71c34cdfe6e4539a33b67c44e6cd6e62ee94be006eec67d57d2b458d898eb7.json  query-a498d6834513d823ed42e0ca3eee63cbda9216a00f8d9a1208f010fb136ac44f.json  query-b534b948d2340ff84dd6be564df24b6699aeb96945dafb62eea071d718cd0c40.json  query-e19f35209dd70e0b626001d3ed0067cf7d178faa88f4c5418a438ee18e8fea0b.json  query-f0a9da936469ffdbc6cf86508168c39dfb39ff2e047e47a0efe59e63e5a8173a.json
cmd/api/: main.go
internal/book/: handler.go  inmemory.go  model.go  postgres.go  repository.go  service.go
internal/error/: apperror.go
migrations/: 20251124182607_books.up.sql  20251124182712_orders.up.sql  20251130115213_users.up.sql  20251130170145_order-add-user-id.down.sql  20251130170145_order-add-user-id.up.sql  20260504194315_add_books_table.sql  20260505123732_add_orders_table.sql
src/: error.rs  main.rs
(+37 files in other folders)
