[package]
name = "bookstore"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["uuid", "chrono", "runtime-tokio-rustls", "postgres", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
